@@ -14,6 +14,7 @@ S3method(summary,adjustedRecords)
 export(adjust)
 export(adjustRecords)
 export(match_restrictions)
+export(remove_tag)
 export(sparseConstraints)
 export(tag_missing)
 export(tagged_values)
